# rosetta-onboarder

./: .gitignore  CLAUDE.md  NOTION.md  README.md  SLACK.md  USAGE.md  devto_post.md  pyproject.toml
.claude/: settings.local.json
data/: 32ef78ca-b142-81b4-9b79-d9ccb4473fe0.pkl  32ef78ca-b142-81ea-94c4-e892b0d97086.pkl  32ff78ca-b142-81ea-9b3f-dad0cc5af2e3.pkl
docs/: NOTION.md  SLACK.md  USAGE.md  future-goals.md  notion-tiers.md
docs/reference/: fetcher.md  mcp_session.md  models.md  tools.md
onboarder/: tools.py
onboarder/github/: fetcher.py
onboarder/notion/: mcp_session.py  models.py
rosetta/: agent.py  cli_helpers.py  config.py  doctor.py  embeddings.py  main.py  notify.py  pipeline.py  refresh.py  scheduler.py  settings_manager.py  setup_wizard.py  slack_bot.py  tools.py
rosetta/chat/: server.py
rosetta/chat/templates/: chat.html
rosetta/github/: fetcher.py
rosetta/notion/: mcp_session.py  models.py
scripts/: clear_slack_history.py
