[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosetta-onboarder"
version = "0.1.0"
description = "Engineer onboarding agent using Notion MCP, GitHub API, Claude, and Gemini embeddings"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "mcp>=1.6.0",
    "PyGithub>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.4",
    "typer[all]>=0.12.0",
    "textual>=1.0.0",
    "slack-sdk>=3.27.0",
    "aiohttp>=3.9.0",
    "tzdata>=2024.1",
]

[project.scripts]
rosetta = "rosetta.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["rosetta"]
